--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ include/
 lib/
 src/shell2sale/shell2sale/settings/*.*
 *.sqlite3
-src/static_cdn/media_root/products/
+src/static_cdn/media_root/products/*
